--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "vue": "^3.4.37",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/axios": "^0.9.36",
     "@types/eslint__js": "^8.42.3",
     "@vitejs/plugin-vue": "^5.1.2",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8.4.47",
     "prettier": "3.3.3",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.1",
