--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "country-info-assessment",
+  "name": "country-info-app",
   "private": true,
   "version": "0.1.0",
   "type": "module",
